---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: ????
  Info:
    - Recolor render objects only if new chunks got scanned
    - Redraw when a drill gets built
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2024. 10. 25
  Info:
    - Mod portal release
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 2024. 10. 25
  Info:
    - Do not check for held item every time the player moves
    - Track chunks the player has put his character/remote-view on
    - Check all the chunks on screen
    - Mark in green, yellow & red what is covered, in & out of range
    - Always draw ores, not only when caching them
    - Only chance the color when updating an ore
    - Simplify the last two commits
    - Replace the white square by a tintable ore texture
    - Highlight ores when initially holding a drill
    - Fix some ores erroneously being marked as red
    - Fix overshooting the bottom right
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2024. 10. 25
  Info:
    - Initial commit