@@ -4,6 +4,7 @@ Date: ????
   Info:
     - Recolor render objects only if new chunks got scanned
     - Redraw when a drill gets built
+    - Redraw immediately when a new drill gets built
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.0
 Date: 2024. 10. 25
